fix user-service
