# src/user-service/docs/swagger.json
@@ -214,12 +214,11 @@
         "req.UserRegReq": {
             "type": "object",
             "required": [
-                "avatar",
                 "birthday",
                 "email",
                 "full_name",
-                "password",
-                "phone"
+                "phone",
+                "role"
             ],
             "properties": {
                 "avatar": {
@@ -234,11 +233,16 @@
                 "full_name": {
                     "type": "string"
                 },
-                "password": {
-                    "type": "string"
-                },
                 "phone": {
                     "type": "string"
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "patient",
+                        "doctor",
+                        "admin"
+                    ]
                 }
             }
         },
@@ -285,6 +289,9 @@
                 "birthday": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -298,6 +305,12 @@
                     "type": "string"
                 },
                 "phone": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updated_at": {
                     "type": "string"
                 }
             }
