# src/user-service/model/res/login_res.go
@@ -10,5 +10,8 @@ type LoginRes struct {
 	Password    string    `json:"password,omitempty"`
 	Avatar      string    `json:"avatar"`
 	Birthday    time.Time `json:"birthday"`
+	Role        string    `json:"role"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
 	AccessToken string    `json:"access_token"`
 }
